--- a/src/posts/templates/posts/index.html
+++ b/src/posts/templates/posts/index.html
@@ -56,11 +56,11 @@
 					<div class="container-fluid">
 						<div class="row">
 							<!-- Te dirige al Whatsapp (Oratoria) -->
-							<div class="columna columna-50 columna-mobile-100">
+							<div class="columna columna-100 columna-mobile-100">
 								<p style="color:white" class="invitacion"><strong>¿QUIERES PARTICIPAR?</strong></a>
 							</div>
-							<div class="columna columna-50 columna-mobile-100 direct-whats">
-								<a href="https://api.whatsapp.com/send?phone=51916648174&text=Quiero%20m%C3%A1s%20informaci%C3%B3n%20del%20curso%20de%20oratoria&fbclid=IwAR0evHEAN5xY-iIT_ep0shXQ9F2kZKibH73Ndvr_Q2sqFTyE3FraxBlNpNQ" class="boton boton-verde">Empieza ahora en <br> WHATSAPP</a>
+							<div class="columna columna-100 columna-mobile-100 direct-whats">
+								<a href="https://api.whatsapp.com/send?phone=51916648174&text=Quiero%20m%C3%A1s%20informaci%C3%B3n%20del%20curso%20de%20oratoria&fbclid=IwAR0evHEAN5xY-iIT_ep0shXQ9F2kZKibH73Ndvr_Q2sqFTyE3FraxBlNpNQ" class="boton boton-verde">Empieza ahora<br>WHATSAPP</a>
 							</div>
 						</div>
 					</div>
@@ -77,7 +77,7 @@
 						<div class="box columna-mobile-100 cont">
 							<div class="bloque-temas">
 								<div class="bloque-img-temas cuadrado-perfecto">
-									<img src="{% static './posts/img/menu_foto1.jpg' %}">
+									<img src="{% static './posts/img/oratoria.jpeg' %}">
 								</div>
 								<div class="bloque-contenido-temas">
 									<h3>ORATORIA</h3>
@@ -115,7 +115,7 @@
 						<div class="box columna-mobile-100 cont">
 							<div class="bloque-temas">
 								<div class="bloque-img-temas cuadrado-perfecto">
-									<img src="{% static './posts/img/menu_foto3.jpg' %}">
+									<img src="{% static './posts/img/coaching.jpeg' %}">
 								</div>
 								<div class="bloque-contenido-temas">
 									<h3>COACHING</h3>
