--- a/src/posts/static/posts/css/style.css
+++ b/src/posts/static/posts/css/style.css
@@ -254,14 +254,9 @@ footer .columna.columna-50
 	width: 50%;
 }
 
-.empujar-50
+.columna-100
 {
-	margin-left: 50%;
-}
-
-.empujar-0
-{
-	margin-left: 0;
+	width: 100%;
 }
 
 #inicio
@@ -291,28 +286,22 @@ footer .columna.columna-50
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin-bottom: 25px;
-}
-
-#inicio .bloque-presentacion-temas
-{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin-bottom: 1%;
+	margin-bottom: 0%;
 }
 
 #inicio .bloque-presentacion-temas .box.cont
 {
 	width: 100%;
 	margin: 10px;
-	/*background-color: white;*/
-	/*border-radius: 10px;*/
+	background-color: white;
+	border-radius: 10px;
 	padding-left: 20px;
 	padding-right: 20px;
-	/*border: 1px solid #17202A;*/
+	border: 1px solid #17202A;
 	margin-bottom:0.05em;
 	color: white;
+	margin-top: -1.5%;
+	margin-bottom: -1.5%;
 }
 
 #inicio .invitacion
@@ -470,7 +459,6 @@ footer .columna.columna-50
 	color: black;
 	font-size: 0.75em;
 	width: 100%;
-	/*nuevo*/
 	opacity: 1;
 	transition: all 0.3s ease;
 	transform: translate(-50%, -50%);
@@ -481,7 +469,6 @@ footer .columna.columna-50
 #galeria img
 {
 	filter: grayscale(1);
-	/*nuevo*/
 	opacity: 0.3;
 	transition: all 0.3s ease;
 }
@@ -649,7 +636,7 @@ footer .columna.columna-50
 
 	#inicio .bloque-inicio  h2
 	{
-		font-size: 2.2em;
+		font-size: 2.3em;
 	}
 
 	#inicio .bloque-presentacion-temas p
