--- a/src/posts/templates/posts/index.html
+++ b/src/posts/templates/posts/index.html
@@ -40,7 +40,7 @@
 				<img src="{% static './posts/img/FotoHeaderOficialFiltro.png' %}">
 				<div class="bloque-inicio">
 					<div class="container-fluid">
-						<h2>Te imaginas un entrenamiento de oratoria con...</h2>
+						<h2>TE IMAGINAS UN ENTRENAMIENTO DE ORATORIA CON...</h2>
 						<div class="bloque-presentacion-temas">
 							<div class="box columna-mobile-100 cont">
 								<p>&nbsp;Habilidades comunicativas - Oratoria&nbsp;</p>
